# randomHelpfuls

./: .gitignore  LICENSE  README.md  appleNetwork.cpp  bitcodeVersion.sh  blenderExportEmpties.py  blenderExportPoints.py  build_and_install_propsync_depends.sh  build_and_install_propsync_depends_win32.sh  configure_abseil.sh  configure_and_build_boringssl.sh  configure_and_build_flatbuffers.sh  configure_and_build_json.sh  configure_and_build_libcurl.sh  configure_and_build_libncurses.sh  configure_and_build_librabbitmq.sh  configure_and_build_librdkafka.sh  configure_and_build_libreplxx.sh  configure_and_build_libressl.sh  configure_and_build_libsasl2.sh  configure_and_build_libwebsockets.sh  configure_and_build_libxml2.sh  configure_and_build_libyaml.sh  configure_and_build_libzfp.sh  configure_and_build_libzmq.sh  configure_and_build_openssl.sh  configure_cares.sh  configure_ceres.sh  configure_cli11.sh  configure_ffmpeg_dash_client.sh  configure_grpc_minimal.sh  configure_libav_noprogs.sh  configure_libzfp.sh  configure_libzmq.sh  configure_mysql_client.sh  configure_opencv.sh  configure_openssl.sh  configure_pcl.sh  configure_proj.sh  dashToYuv.sh  (+15 more)
appleCertificate/: Entitlements.plist  README.md  appleCertificate.h  appleCertificate.mm
pc2mesh/: CMakeLists.txt  README.md  main.cpp
propsyncScripts/: gainers.sh  losers.sh
